Timer app functionality completed

--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,11 @@ dialog {
   max-width: 500px;
   width: 90%;
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
 }
 
 dialog::backdrop {
